{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 18,
  "lineage": "0052e95a-d8e7-a9ad-f519-026f93032290",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01caf43b46af80270",
            "arn": "arn:aws:ec2:us-east-2:156041418844:elastic-ip/eipalloc-01caf43b46af80270",
            "domain": "vpc",
            "id": "eipalloc-01caf43b46af80270",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-224-85-155.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.85.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-Jupiter-default-eip-nat-az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-eip-nat-az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03801e6f9deb149bc",
            "arn": "arn:aws:ec2:us-east-2:156041418844:elastic-ip/eipalloc-03801e6f9deb149bc",
            "domain": "vpc",
            "id": "eipalloc-03801e6f9deb149bc",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-15-101-172.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.101.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "APCI-Jupiter-default-eip-nat-az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-eip-nat-az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:internet-gateway/igw-08e9ff96e20878d95",
            "id": "igw-08e9ff96e20878d95",
            "owner_id": "156041418844",
            "tags": {
              "Name": "APCI-Jupiter-default-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-igw",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01caf43b46af80270",
            "association_id": "eipassoc-04505bf4f49881f97",
            "connectivity_type": "public",
            "id": "nat-017d0fd346a154790",
            "network_interface_id": "eni-0e303c143a7962262",
            "private_ip": "10.1.0.195",
            "public_ip": "18.224.85.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0805fc0b989fec0d0",
            "tags": {
              "Name": "APCI-Jupiter-default-nat-gw-azla",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-nat-gw-azla",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1a",
            "module.vpc.aws_subnet.frontend_subnet1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03801e6f9deb149bc",
            "association_id": "eipassoc-0d65c2838076da4d8",
            "connectivity_type": "public",
            "id": "nat-0055795fc6a430690",
            "network_interface_id": "eni-0c1d32370f6fe43f7",
            "private_ip": "10.1.1.73",
            "public_ip": "3.15.101.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c6ffe513ec183cd",
            "tags": {
              "Name": "APCI-Jupiter-default-nat-gw-azlb",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-nat-gw-azlb",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1b",
            "module.vpc.aws_subnet.frontend_subnet2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:route-table/rtb-0e2ff582ed80d8216",
            "id": "rtb-0e2ff582ed80d8216",
            "owner_id": "156041418844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-017d0fd346a154790",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-default-private-rt-az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-private-rt-az1a",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_subnet.frontend_subnet1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:route-table/rtb-0492ac373064a4970",
            "id": "rtb-0492ac373064a4970",
            "owner_id": "156041418844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0055795fc6a430690",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-default-private-rt-az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-private-rt-az1b",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1b",
            "module.vpc.aws_nat_gateway.nat_gw_az1b",
            "module.vpc.aws_subnet.frontend_subnet2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:route-table/rtb-09eb8fa9c254ad106",
            "id": "rtb-09eb8fa9c254ad106",
            "owner_id": "156041418844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e9ff96e20878d95",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "APCI-Jupiter-default-public-rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-public-rt",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "timeouts": null,
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f27900f2a447aad2",
            "route_table_id": "rtb-0e2ff582ed80d8216",
            "subnet_id": "subnet-0f5a3832c7b5378ea"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_route_table.private_rt_az1a",
            "module.vpc.aws_subnet.backend_subnet1",
            "module.vpc.aws_subnet.frontend_subnet1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ee42b43afed51a7",
            "route_table_id": "rtb-0e2ff582ed80d8216",
            "subnet_id": "subnet-075e345592f196c48"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_az1a",
            "module.vpc.aws_nat_gateway.nat_gw_az1a",
            "module.vpc.aws_route_table.private_rt_az1a",
            "module.vpc.aws_subnet.backend_subnet2",
            "module.vpc.aws_subnet.frontend_subnet1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c8a1e2f47d392f2",
            "route_table_id": "rtb-09eb8fa9c254ad106",
            "subnet_id": "subnet-05c6ffe513ec183cd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.frontend_subnet2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_subnet_az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d7cc84ef06dc49",
            "route_table_id": "rtb-09eb8fa9c254ad106",
            "subnet_id": "subnet-0805fc0b989fec0d0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.frontend_subnet1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:subnet/subnet-0f5a3832c7b5378ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5a3832c7b5378ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156041418844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-Jupiter-default-backend-subnet1",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-backend-subnet1",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:subnet/subnet-075e345592f196c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075e345592f196c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156041418844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-Jupiter-default-backend-subnet2",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-backend-subnet2",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:subnet/subnet-0805fc0b989fec0d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0805fc0b989fec0d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "156041418844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-1-shared-Jupiter-default-frontend-subnet1",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-1-shared-Jupiter-default-frontend-subnet1",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:subnet/subnet-05c6ffe513ec183cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6ffe513ec183cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "156041418844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "APCI-1-shared-Jupiter-default-frontend-subnet2",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-1-shared-Jupiter-default-frontend-subnet2",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "vpc_id": "vpc-044f6cf98d5fc413f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:156041418844:vpc/vpc-044f6cf98d5fc413f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f25d95106a0d2e23",
            "default_route_table_id": "rtb-05461e2e718adb154",
            "default_security_group_id": "sg-05f8a06a255930bf1",
            "dhcp_options_id": "dopt-0a863a3bf03b335aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044f6cf98d5fc413f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05461e2e718adb154",
            "owner_id": "156041418844",
            "tags": {
              "Name": "APCI-Jupiter-default-main-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            },
            "tags_all": {
              "Name": "APCI-Jupiter-default-main-vpc",
              "application": "Jupiter",
              "contact": "devops@apci.com",
              "creationTime": "2025-04-11T11:20:24Z",
              "environment": "default",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "APCI"
            }
          }
        }
      ]
    }
  ]
}